# BUPT_Coding

./: .gitignore  README.org
Introduction_To_Algorithm/Intro_Algorithm/: Intro_Algorithm.sln  heap_sort.cpp
Introduction_To_Algorithm/Intro_Algorithm/Intro_Algorithm/: heap_sort.cpp  quickSort.cpp
Introduction_To_Algorithm/Leetcode_Practice/: minStack.cpp
NLP/: readme.org
NLP/Chinese word segmentation/: test1.txt  test2.txt  test3.txt
NLP/Search_Engine/: engine.py  indexData.py  query.py
NLP/Text_Classify/: classify_network.py  handleWebpage.py  text_classify.py
NLP/Text_Classify/test/: test1.txt  test2.txt  test3.txt
NLP/webConent_classify/src/: classify_network.py  handleWebpage.py  webcontent_identify.py
NLP/webConent_classify/test/: test1.txt  test2.txt  test3.txt  test4.txt
compiler/LL_grammer/: readme.org
computer_network/DNS_Relay_Server/: CMakeLists.txt  DNS_Database.cpp  DNS_Database.h  DNS_Relay_Server.cpp  DNS_Relay_Server.h  DNS_utils.cpp  DNS_utils.h  README.md  client_daytime.cpp  main.cpp  server_daytime.cpp  testmain.cpp
computer_network/GoBackN/: GoBackN.c  README.org  datalink_selective.c
graphics/作业一_简易图形库实现/: SimpleGL.py
graphics/作业二_OpenGL绘制基本场景/: opengl_test.cpp
multimedia/person_web/: Readme.txt  hello.py
multimedia/showBmp/: mainwindow.cpp  mainwindow.h  mainwindow.ui  showBmp.pro
natural language process/Chinese word segmentation/: fenci.py  result1.txt  result2.txt  result3.txt
operating system/assembly/: student_score.asm
operating system/reader_writer/: configRW.txt  read_write.py  测试结果.txt
(+112 files in other folders)
